<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Launch Screen -->
    <string name="upcomingButton">Upcoming Elections</string>
    <string name="representativeButton">Find My Representations</string>

    <!-- Upcoming  Elections Screen -->
    <string name="upcoming_election_header">Upcoming Elections</string>
    <string name="saved_election_header">Saved Elections</string>
    <string name="upcoming_election_error">Can\'t not retrieve upcoming election</string>

    <!-- Voter Information Screen -->
    <string name="election_information">Election Information</string>
    <string name="follow_button">Follow Election</string>
    <string name="unfollow_button">Unfollow Election</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voter_information_error">Can\'t not retrieve voter information detail</string>

    <!-- Representative Screen -->
    <string name="search_title">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="find_my_representatives_button">Find My Representatives</string>
    <string name="use_my_location_button">Use My Location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="ic_profile_description">Profile image of representation</string>
    <string name="ic_web_site_description">Web site link</string>
    <string name="ic_facebook_description">Facebook link</string>
    <string name="ic_twitter_description">Twitter link</string>


</resources>
