<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_search_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                style="@style/TextViewTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.addressLine1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/edt_address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.addressLine2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_address_line_1" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.city}"
                app:layout_constraintEnd_toStartOf="@id/spinner_states"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_address_line_2" />

            <Spinner
                android:id="@+id/spinner_states"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/edt_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edt_city"
                app:layout_constraintTop_toTopOf="@id/edt_city"
                app:stateValue="@{viewModel.state}" />

            <EditText
                android:id="@+id/edt_zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.zip}"
                app:layout_constraintEnd_toEndOf="@id/edt_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_city" />

            <Button
                android:id="@+id/button_search"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.findMyRepresentativesClick()}"
                android:text="@string/find_my_representatives_button"
                app:layout_constraintTop_toBottomOf="@id/edt_zip" />

            <Button
                android:id="@+id/button_location"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.useMyLocationClick()}"
                android:text="@string/use_my_location_button"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_list_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_search_form">

            <TextView
                android:id="@+id/representative_title"
                style="@style/TextViewTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:fadeVisible="@{viewModel.showLoading.booleanValue()}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_representations"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                motion:visibilityMode="ignore" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>