<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_profile_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            tools:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextViewTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextViewCommonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/iv_web_site"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_party"
            style="@style/TextViewCommonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toStartOf="@+id/iv_web_site"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/iv_web_site"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_web_site_description"
            app:layout_constraintEnd_toStartOf="@+id/iv_facebook"
            app:layout_constraintTop_toTopOf="@+id/iv_facebook"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_facebook_description"
            app:layout_constraintEnd_toStartOf="@+id/iv_twitter"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_twitter_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_facebook"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>