<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ui.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/voterInfoContainer"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:dateText="@{viewModel.election.electionDay}" />

        <TextView
            android:id="@+id/state_header"
            style="@style/TextViewTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/TextViewCommonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onURLClick(viewModel.voterInfo.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:visible="@{viewModel.voterInfo.votingLocationFinderUrl}" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onURLClick(viewModel.voterInfo.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:visible="@{viewModel.voterInfo.ballotInfoUrl}" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address"
            tools:visible="@{viewModel.voterInfo.correspondenceAddress}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfo.name}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfo.correspondenceAddress}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/actionButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.toggle(viewModel.election)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:followText="@{viewModel.isFollow}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>